public/stylesheets/all.css
/*------------------------------------------------------------------------------------
  @group Global Reset
------------------------------------------------------------------------------------*/
* {
  padding:0;
  margin:0;
}
h1, h2, h3, h4, h5, h6, p, pre, blockquote, label, ul, ol, dl, fieldset, address { margin:.5em 0; }
li, dd { margin-left:5%; }
fieldset { padding: .5em; }
select option{ padding:0 5px; }

h1 { font-size: 18px; }
h2 { font-size: 14px; }

.access{ display:none; } /* For accessibility related elements */
.clear{ clear:both; height:0px; font-size:0px; line-height:0px; overflow:hidden; }
a{ outline:none; }
a img{ border:none; }

.clearfix:after {
    content: ".";
    display: block;
    height: 0;
    clear: both;
    visibility: hidden;
}
* html .clearfix {height: 1%;}
.clearfix {display:inline-block;}
.clearfix {display: block;}

/* @end */

/*------------------------------------------------------------------------------------
  @group General Styles
------------------------------------------------------------------------------------*/

body{
  font-size:12px;
  font-family: "Futura", "Gill Sans", Arial, sans-serif;
}

.nav_info {
  background:#DFDFDF;
  position: fixed;
  width: 100%;
  top: 0px;
  z-index: 5;
}

.nav_info a {
  font-size: 16px;
  line-height: 28px;
}

.nav_info .title a {
  font-size: 20px;
  line-height: 20px;
}

.extra_info {
  background:#DFDFDF;
  width: 100%;
  z-index: 4;
  position: fixed;
  padding-top: 75px;
  top: 0px;
  border-bottom:2px solid #000;
}
.wrap {
  text-align:center;
}

.messages {
  font-size: 16px;
}

.messages .flash-notice, .messages .notice {
  color: green;
}

.messages .error, .messages .alert, .messages .flash-error, .messages .flash-alert {
  color: red;
}

#error_explanation {
 color: red;
}

.title, .subtitle{
  padding: 0px;
  margin:0 auto;
  width:90%;
  text-align:center;
}

.title{
  margin-top:0px;
  padding-top:6px;
  font-size:20px;
  color:#000;
  text-transform:uppercase;
  letter-spacing:3px;
}

.title a{
  color:#000;
}

.subtitle{
  margin-top:0px;
  margin-bottom:0px;
  text-transform:uppercase;
  font-size:11px;
  color:#999;
}

.subtitle a{
  margin-top:0px;
  margin-bottom:0px;
  text-transform:uppercase;
  font-size:11px;
  line-height:22px;
  color:#9999CC;
}

.current_streak, .longest_streak{
  width:40%;
  float:left;
}
.current_streak, .longest_streak{
  font-family: Helvetica, Arial, sans-serif;
  text-transform:none;
}

#zone {
  background: #DFDFDF;
  margin: 5px 0px 10px 0px;
  padding: 5px 0px 5px 0px;
  text-align: center;
}

.type{
  display:block;
  font-size:10px;
  margin-bottom:2px;
  color:#999;
  text-transform:uppercase;
  letter-spacing:0;
}
.num{
  display:block;
  font-size:30px;
  font-family: Helvetica, Arial, sans-serif;
  color:#000;
  font-weight:bold;
  letter-spacing:-3px;
}
.num .desc{
  position:relative;
  top:-8px;
  left:4px;
  font-size:11px;
  letter-spacing:0;
  color:#999;
  font-weight:bold;
}

a{
  color:#00538d;
  text-decoration:none;
}

/* @end */

/*-------------------------------------
  @group Homepage
---------------------------------------*/

#main{
  padding-top:50px;
  height:550px;
}

#main < .extra_info{
  padding-top:5px;
}

#content{
  width: 95%;
}

#recentUsers, #userRecords{
  width:30%;
}

#recentUsers{
  float:left;
  padding-right: 10px;
}

#userRecords{
  float:right;
  padding-left: 10px;
}

.footer {
  font-size: 12px;
  border-top: 1px solid black;
  padding: 2px 6px;
  position: fixed;
  width: 100%;
  /*top: 485px;*/
  top: 515px;
  height: 100%;
  /*bottom: 0px;*/
  z-index: 5;
  background: #FFF;
}

.footer a{
  font-size: 18px;
}

.shared-links {
  padding: 10px 6px;
  font-size: 16px;
}

.footnote{
  text-align:right;
  font-size:11px;
  color:#666;
  font-family: Helvetica, Arial, sans-serif;
  line-height:16px;
}
.footnote a{
  color:#333;
}
.footnote a:hover{ text-decoration:underline; }

/* @end */

/*------------------------------------------------------------------------------------
  @group Calendar Styles
------------------------------------------------------------------------------------*/

#widget, .calendar {
  margin:0px auto 5px auto;
  padding:90px 0 20px 0;
  width:95%;
  background:#fff;
  font-size:24px;
}


#calendar table, .calendar table {
  width:98%;
  border-spacing:none;
  border-collapse:collapse;
}

#calendar table th .monthName, .calendar table th .monthName {
  padding:0px;
  font-size:22px;
  letter-spacing:2px;
  text-transform:uppercase;
  color:#b20000;
  margin:0px;
}

#calendar table th .current-year, .calendar table th .current-year {
  padding:0px;
  padding-right:14px;
  font-size:14px;
  letter-spacing:2.5px;
  text-transform:uppercase;
  color:#b20000;
}

#calendar table th, .calendar table th {
  font-size:9px;
  font-weight:normal;
  text-transform:uppercase;
}

/*iphone*/
@media screen and (max-device-width: 480px) {
  #calendar table th, .calendar table th {
    font-size:8px;
  }
}


#calendar table th a.next, .calendar table th a.next { text-align:right; }

#calendar table td, .calendar table td {
  position:relative;
  text-align:center;
  font-size:28px;
  font-weight:bold;
  width:12%;
  height:50px;
  opacity:1.0;
}

#calendar table td.othermonth, .calendar table td.othermonth, td.othermonth, table td.othermonth {
  color:#ccc;
}

#widget form {
  width:90%;
  margin:0; padding:0;
}

#widget p{
  font-size: 12px;
}

#widget textarea {
  width:40%;
  height:150px;
  margin:0 15%;
}

tr.dayname th{
  width:12%;
  padding:5px 0;
  text-transform:uppercase;
  font-size:12px;
  color:#666;
  font-weight:normal;
  letter-spacing:2px;
  border:1px solid #eee;
  border-left:none;
  border-right:none;
}
tr.dayname abbr{
  border:none;
}

/* @end */


/*------------------
Form styles
-------------------*/

.hidden {
  display: none;
}

.button, input[type="submit"].button {
  color: #000;
  width: 90%;
  font-size: 22px;
  line-height: 44px;
  font-weight:bold;
  text-align: center;
  display: inline-block;
  height: 44px;
  background: #EEEEFF;
  border: 2px solid #000;
  -webkit-border-radius: 5px;
}

label {
  font-size: 18px;
}

input {
  padding: 5px;
  font-size: 24px;
  width: 90%;
}

input[type=submit] {
  font-size:32px;
  margin-top: 12px;
  padding:0px;
}




/*------------------------------------------------------------------------------------
  Nav & Stat Styles
------------------------------------------------------------------------------------*/

.stats {
  font-size:11px;
  color:#666;
}

.stats .stat {
  padding: 0 3% 0 1%;
}

.sharing {
  font-size:11px;
  color:#666;
  display:inline-block;
}

.sharing .app {
  /*padding: 0 3% 0 1%;*/
}

.nav {
  font-size:15px;
  color:#666;
}

.nav span{
  padding: 0 0 0 2%;
}

.nav a {
  font-size:15px;
  line-height: 40px;
  color:#468;
}

.auth {
  font-size:16px;
  padding-top: 0px;
  padding-right: 10px;
}

ol.example, ul.example {
 text-align:left;
}

.user_list ol, .user_list ul {
 text-align:left;
}

.user_list ol a, .user_list ul a {
 font-size:22px;
 line-height:44px;
}

.about {
  padding:0px 16px;
  font-size:18px;
  line-height:22px;
}

.about ul, .about ol{
  padding-left: 16px;
}

/*------------------------------------------------------------------------------------
  @group X Styles
------------------------------------------------------------------------------------*/

.othermonth .xmarksthespot{
  opacity:0.2;
}

.xmarksthespot{
  /*width:12%;
  height:60px;
  position:relative;
  float:left;*/
  margin-top:-60px;
  z-index:3;
  background:url(../images/x_1.png) 60% 100% no-repeat;
  opacity:0.7;
}

.xmarksthespot_2{
  /*width:12%;
  height:60px;
  position:relative;
  float:left;*/
  margin-top:-60px;
  z-index:3;
  background:url(../images/x_2.png) 60% 100% no-repeat;
  opacity:0.7;
}

.x-1{ background-image:url(../images/x_1.png);}
.x-2{ background-image:url(../images/x_2.png);}
.x-3{ background-image:url(../images/x_3.png);}

.today {
  color: green;
}
/* @end */

#calenders, #calendar {
	position:absolute;
	left:0px;
        top:110px;
	width:100%;
    	-webkit-transition:all 0.5s ease-in-out;
	-moz-transition:all 0.5s ease-in-out;
	-o-transition:all 0.5s ease-in-out;
	-ms-transition:all 0.5s ease-in-out;
	transition:all 0.5s ease-in-out;
}

#calendar {
        top:130px;
}

#calenders.fast {
    	-webkit-transition:all 0.3s ease-in-out;
	-moz-transition:all 0.3s ease-in-out;
	-o-transition:all 0.3s ease-in-out;
	-ms-transition:all 0.3s ease-in-out;
	transition:all 0.3s ease-in-out;
}

#notused {
    -webkit-transition:none;
	-moz-transition:none;
	-o-transition:none;
	-ms-transition:none;
	transition:none;
	-webkit-transition:all 1.0s ease-in-out;
	-moz-transition:all 1.0s ease-in-out;
	-o-transition:all 1.0s ease-in-out;
	-ms-transition:all 1.0s ease-in-out;
	transition:all 1.0s ease-in-out;
}

#calenders div, #calenders li, #calenders span {
	padding:0;
	margin:0;
}

/*#calenders .calendar {
  display: inline-block;
}*/

